[Upd] Applied Intellij idea analyze script